# AtlasCode

atlas/: build_output.lo  build_output.log]  prj.conf  sample.yaml
atlas/src/: main.c
atlasDebug/: CMakeLists.txt
atlasDebug/src/: main.c
atlasSS/: CMakeLists.txt  build_output.log]  prj.conf
atlasSS/src/: main.c
atlasSSSimple/: CMakeLists.txt
atlasSSSimple/src/: main.c
atlasSimple/: CMakeLists.txt
atlasSimple/src/: main.c
atlasTag/: CMakeLists.txt
atlasTag/src/: main.c
atlasTagDebug/: CMakeLists.txt  sample.yaml
atlasTagDebug/src/: main.c
atlasTagSS/: CMakeLists.txt
atlasTagSS/src/: main.c
atlasTagSSSimple/: CMakeLists.txt
atlasTagSSSimple/src/: main.c
atlasTagSimple/: CMakeLists.txt
atlasTagSimple/src/: main.c
atlasTagTest/: CMakeLists.txt  prj.conf
atlasTagTest/src/: main.c
atlasTagTest2/: CMakeLists.txt
atlasTagTest2/src/: main.c
atlasTagTrue/: CMakeLists.txt
atlasTagTrue/src/: main.c
atlasTest/: CMakeLists.txt  build_output.lo  prj.conf
atlasTest/src/: main.c  simple_tx.txt
atlasTest2/: CMakeLists.txt
atlasTest2/src/: main.c
atlasTrue/: CMakeLists.txt
atlasTrue/src/: main.c
bluetooth/peripheral/boards/: raytac_mdbt50_db_33_nrf52833.overlay
card/: CMakeLists.txt  ds_twr_initiator.c  ds_twr_initiator_sts.c  mdb50_db_33_dwm3000.overlay
cardNewRep/platform/: port.c
cardRep/: main.c  mdb50_db_33_dwm3000.overlay
cardSpi/: CMakeLists.txt  ds_twr_initiator_sts.c  prj.conf
console/: prj.conf  sample.yaml
console/src/: main.c
drivers/dwm3000/: dwm3000.c  dwm3000.h
result/: CMakeLists.txt  sample.yaml
result/src/: main.c
resultCard/: CMakeLists.txt  prj.conf
resultCard/src/: ds_twr_initiator_sts.c
test/: CMakeLists.txt  prj.conf
test/src/: main.c  supplementaryGPIOTest.txt
